css styled blinking overlay cursor

--- a/sim.html
+++ b/sim.html
@@ -68,8 +68,9 @@
       'v': 'very',
       // 'vv': 'vv',
       'b': 'but',
-      'bb': 'be',
-      'bbb': 'before',
+      'gd': 'be', // ==
+      //'bb': 'be', // too many chars
+      'gggg': 'before',
       
       'y': 'you',
       'yy': 'your',
@@ -129,7 +130,7 @@
       'ei': 'either',
       'fst': 'first',
       'fr': 'friend',
-      'gd': 'good',
+      // 'gd': 'good', conflict =be
       'grt': 'great',
       'herf': 'herself',
       'hm': 'him',
