--- a/sim.html
+++ b/sim.html
@@ -234,6 +234,7 @@
       // === at ending of word
       // (hold key and tap space)
       // a_  -able (or b_? jsk)
+      //     -ant (jsk)
       // a__ -ance
 
       // s_  -sion
@@ -251,9 +252,18 @@
 
       // = left hand
       // e_  -ence
+      //     -ed (jsk)
       // t_  -ount
+      //     -tory (jsk)
+      // 
 
       // = right hand
+      // y_
+      // u_
+      // i_  -ish (jsk)
+      //     -ist (jsk)
+      //     -ism (jsk)
+      //     -ization (jsk)
       // o_  -ong
       // l_  -less
       // m_  -ment
