--- a/sim.html
+++ b/sim.html
@@ -122,7 +122,7 @@
 	  ()=>capslock=!capslock);
 
       screen = screen.replace(
-	  /.:BACKSPACE ?$/, '');
+	  /.?:BACKSPACE ?$/, '');
       
 
       // dangerous!
