correct the new rollup for right side

--- a/sim.html
+++ b/sim.html
@@ -16,12 +16,18 @@
 
 </style>
 
-    <title>SevenPercent Keyboard Simulator</title>
+    <title>ZevenK - a 7% Keyboard</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1.0">
   </head>
   <body onkeydown="down(event);" onkeyup="up(event);">
 
-    <h1>SevenPercent Keyboard Simulator</h1>
+    <h1>ZevenK - a 7% Keyboard</h1>
+    <b>(simulator to train before circuit</b><br/>
+    <pre id=keyboard>
+qwert yuiop []\
+asdfg hjkl; '
+zxcvb nm,./      
+    </pre>
 
     <b>Only use keys: A S D F G   and    SPACE</b><br/>
     Output: <button onclick="window.out.innerHTML='';">clear</button><br/>
