comment on uniqueness and long words

--- a/sim.html
+++ b/sim.html
@@ -110,6 +110,9 @@ z&lt;&lt;&lt;x&lt;&lt;&lt;c&lt;&lt;&lt;v&lt;&lt;&lt;b    n&gt;&gt;&gt;m&gt;&gt;&
       if (exact)
 	  return s;
       // otherwise: beep +  wait for space
+      // (the word is much longer and
+      //  you'll be thankful)
+      // TODO: need different beep!
       return res+':BEEP:WAITSPACE-';
   }
   
