--- a/sim.html
+++ b/sim.html
@@ -66,6 +66,25 @@ z&lt;&lt;&lt;x&lt;&lt;&lt;c&lt;&lt;&lt;v&lt;&lt;&lt;b    n&gt;&gt;&gt;m&gt;&gt;&
 
   let allkeys = Object.keys(keybm).sort();
   
+  // return index of key where it would ber in the list if there, or is ther
+  function binSearch(lst, key) {
+      let a = 0, b = lst.length, i;
+      if (!b) return 0;
+
+      while (a <= b) {
+	  console.log(a,b,i);
+	  i = Math.floor( (a+b) / 2 );
+	  if (lst[i] < key) {
+	      a = i+1;
+	  } else if (lst[i] > key) {
+	      b = i-1;
+	  } else {
+	      return i;
+	  }
+      }
+      return a;
+  }
+  
   // help(wordpart)
   // returns non-null if only one future word match
   // seaches for /^word.{1,3}$/
@@ -140,7 +159,7 @@ z&lt;&lt;&lt;x&lt;&lt;&lt;c&lt;&lt;&lt;v&lt;&lt;&lt;b    n&gt;&gt;&gt;m&gt;&gt;&
 	  } else if (screen.match(/\w $/)) {
 	      // add dot if no special mark
 	      screen = screen.replace(
-		  / $/, '. ');
+		  / $/, '.');
 	      // TODO: set forward Capitaliz?
 	  } else if (screen.match(/\W $/)) {
 	      // new paragraph
@@ -181,7 +200,7 @@ z&lt;&lt;&lt;x&lt;&lt;&lt;c&lt;&lt;&lt;v&lt;&lt;&lt;b    n&gt;&gt;&gt;m&gt;&gt;&
       // all functions called need to
       // return a string ('' or whatever)
       screen = screen.replace(
-	  /(\S+:PICK-([\w\d\s]))$/,
+	  /(\w\S*:PICK-([\w\d\s]))$/,
 	  (_,s,p)=>{
 	      let pi = ' asdfg'.indexOf(p);
  	      if (pi >= 0) p = pi;
@@ -200,10 +219,10 @@ z&lt;&lt;&lt;x&lt;&lt;&lt;c&lt;&lt;&lt;v&lt;&lt;&lt;b    n&gt;&gt;&gt;m&gt;&gt;&
 	  (_,x)=>x.toUpperCase());
       screen = screen.replace(
 	  /(\S+\s*):LOWERCASE ?$/,
-	  (_,x)=>x.toUpperCase());
+	  (_,x)=>x.toLowerCase());
       screen = screen.replace(
 	  /(\S)(\S*\s*):CAPITALIZE/,
-	  (_,x,y)=>x.toUpperCase()+y);
+	  (_,x,y)=>x.toUpperCase()+y.toLowerCase());
 
       screen = screen.replace(
 	  /(\S+)\s+(\S+\s*):JOIN/,
@@ -265,7 +284,7 @@ z&lt;&lt;&lt;x&lt;&lt;&lt;c&lt;&lt;&lt;v&lt;&lt;&lt;b    n&gt;&gt;&gt;m&gt;&gt;&
 
       // - try %foo - full word
       screen = screen.replace(
-	  /\b(?<!')(\w+\s*)$/,
+	  /\b(?<!'")(\w+\s*)$/,
 	  (_,w)=>subst(_, w, '%'));
 
       // - try foo - partial/end
